tests/ui/fmt/issue-104142.stderr
error: invalid format string: unmatched `}` found
  --> $DIR/issue-104142.rs:4:9
   |
LL |     \"\'}､"#
   |         ^ unmatched `}` in format string
   |
   = note: if you intended to print `}`, you can escape it using `}}`

error: aborting due to 1 previous error

